--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3651,10 +3651,10 @@ img {
 
 .site-footer .lower-footer .copyright {
     display: inline-block;
-    float: left;
     font-size: 14px;
     font-size: 0.875rem;
-    margin: 0;
+    margin: 0 auto;
+    
 }
 
 @media (max-width: 991px) {
