--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3941,7 +3941,7 @@ img {
     margin: 0 0 1.5em;
 }
 
-.feature-section .feature-grid {
+.feature-grid {
     border: 2px solid #f3f0f0;
     padding: 40px 28px;
     height: 370px;
@@ -3953,7 +3953,7 @@ img {
 }
 
 @media (max-width: 768px) {
-    .feature-section .feature-grid {
+ .feature-grid {
         margin-bottom: 15px;
         height: 100%;
         text-align: center;
@@ -3964,19 +3964,19 @@ img {
     }
 }
 
-.feature-section .feature-grid .fi:before {
+ .feature-grid .fi:before {
     font-size: 55px;
     color: #CE6439;
 }
 
-.feature-section .feature-grid h3 {
+.feature-grid h3 {
     font-size: 20px;
     font-size: 1.25rem;
     font-weight: 400;
     margin: 0.8em 0 1em;
 }
 
-.feature-section .feature-grid p {
+.feature-grid p {
     margin: 0;
 }
 
