--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1,3 +1,4 @@
+
 .w-25 {
   width: 25% !important;
 }
@@ -480,7 +481,7 @@
   text-align: center;
   transition-duration: 300ms !important;
   cursor: pointer;
-  color: #6C7A96;
+  color: #6C7A96 !important;
 }
 @media (max-width: 991px) {
   .card-text {
